done factory, and calculator even worksgit add .Now it is needed to add exceptions and logging